--- a/.github/workflows/release_ci_cd.yml
+++ b/.github/workflows/release_ci_cd.yml
@@ -24,19 +24,14 @@ jobs:
           envkey_NG_APP_KEY : ${{ secrets.OPENAI_KEY }}
           file_name: .env
           fail_on_empty: false
-      
-      - name: show .env
-        run: |
-          cat .env
-      
-      
+          
       - name: build angular, output in dist/openai
         run: |
-          npm run build
-      
+          CI=false npm run build
+          
       - name: show dir, .env file
         run: |
-          ls -la dist
+          ls -la 
           
       - name: download, run httpd image, container name serving_base
         run: |
